# Python

./: extrai_texto.py  pyproject.toml  requirements.txt  setup.py
